fix z-index mistake: menu above navigation

--- a/src/sections/shared/Menu/styles.scss
+++ b/src/sections/shared/Menu/styles.scss
@@ -13,6 +13,7 @@
     transition-delay: 0s;
     text-align: center;
     font-weight: bold;
+    z-index: 1000;
     
     &.hidden {
         transition-duration: 0.5s;
